[gd_scene load_steps=13 format=3 uid="uid://ctqf11ltd33hw"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_e8txh"]
[ext_resource type="PackedScene" uid="uid://cgsn8y8emb4lv" path="res://scripts/components/health_component.tscn" id="2_8tngo"]
[ext_resource type="PackedScene" uid="uid://boqu3nbg5ca7q" path="res://scripts/player/characters/arch/arch.tscn" id="2_j7e0h"]
[ext_resource type="PackedScene" uid="uid://64t337w2n4fs" path="res://scripts/components/hitbox_component.tscn" id="4_kgvqi"]
[ext_resource type="PackedScene" uid="uid://ctyei6ne0fqea" path="res://scripts/components/shoot_component.tscn" id="5_6vod3"]
[ext_resource type="PackedScene" uid="uid://bam3ja14c33gu" path="res://scripts/bullets/bullets.tscn" id="6_8mot0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1g4pl"]
size = Vector2(14, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axdng"]
size = Vector2(8, 9.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vi85d"]
size = Vector2(14, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08t6q"]
size = Vector2(50, 61.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g55e3"]
size = Vector2(8, 35)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qgldo"]
radius = 2.0
height = 26.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_e8txh")
selected_character = null
character_scenes = Array[PackedScene]([ExtResource("2_j7e0h")])

[node name="AimCenter" type="Marker2D" parent="."]
position = Vector2(0, -5)

[node name="BulletSpawn" type="Marker2D" parent="AimCenter"]
position = Vector2(30, 5)

[node name="MainCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_1g4pl")

[node name="LedgeDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="LedgeDetectionL" type="CollisionShape2D" parent="LedgeDetection"]
position = Vector2(-11, -10)
shape = SubResource("RectangleShape2D_axdng")
debug_color = Color(0.572549, 0.545098, 0.27451, 0.419608)

[node name="LedgeDetectionR" type="CollisionShape2D" parent="LedgeDetection"]
position = Vector2(11, -10)
shape = SubResource("RectangleShape2D_axdng")
debug_color = Color(0.572549, 0.545098, 0.27451, 0.419608)

[node name="PlatformCheck" type="Area2D" parent="."]
position = Vector2(0, 25)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformCheck"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_vi85d")
debug_color = Color(0.704279, 0.451509, 0.514932, 0.42)

[node name="GroundClearance" type="Area2D" parent="."]
modulate = Color(1, 0.0705882, 0.498039, 0.615686)
position = Vector2(0, 25)
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundClearance"]
position = Vector2(0, 31)
shape = SubResource("RectangleShape2D_08t6q")

[node name="ClippingPreventer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClippingPreventer"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_g55e3")
debug_color = Color(0.460277, 0.544393, 0.645848, 0.42)

[node name="HealthComponent" parent="." instance=ExtResource("2_8tngo")]
health = 1000

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_kgvqi")]
collision_layer = 8
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_qgldo")
debug_color = Color(0.909804, 0, 0.737255, 0.419608)

[node name="ShootComponent" parent="." node_paths=PackedStringArray("aim_center", "bullet_spawn") instance=ExtResource("5_6vod3")]
projectile = ExtResource("6_8mot0")
aim_center = NodePath("../AimCenter")
bullet_spawn = NodePath("../AimCenter/BulletSpawn")
is_single_bullet = true
shoot_per_minute = 10000
angle_randomness = 2.0

[node name="State" type="Node2D" parent="."]
visible = false

[node name="Ket" type="Label" parent="State"]
modulate = Color(1, 1, 1, 0.556863)
offset_left = 35.0
offset_top = -3.0
offset_right = 136.0
offset_bottom = 66.0
text = "State	:
Facing:
Head:
Flip:
Fire:"

[node name="CharState" type="Label" parent="State"]
offset_left = 107.0
offset_top = -3.0
offset_right = 208.0
offset_bottom = 66.0
text = "forward"

[node name="CharFacing" type="Label" parent="State"]
offset_left = 108.0
offset_top = 23.0
offset_right = 209.0
offset_bottom = 92.0
text = "backward"

[node name="CharHead" type="Label" parent="State"]
offset_left = 108.0
offset_top = 49.0
offset_right = 209.0
offset_bottom = 118.0
text = "up"

[node name="CharFlip" type="Label" parent="State"]
offset_left = 108.0
offset_top = 75.0
offset_right = 209.0
offset_bottom = 144.0
text = "up"

[node name="CharFire" type="Label" parent="State"]
offset_left = 108.0
offset_top = 101.0
offset_right = 209.0
offset_bottom = 170.0
text = "up"
